major update to drag and drop with connected tables
Change to using html5sortable instead of jQueryUI sortable to fix bugs
such as unable to drag elements from tables to a connected table that
was scrollable via flexbox/overflow:auto css.
Fix css scrollbar for library albums
Remove bug items related to webkit in todo.md and css, as they have been
fixed in webkit as of May 2016 (update to Chrom* 51 or newer).
Change use of *.table and *.tbody to be used almost everywhere
clearSelected() now uses its own function
mutiSelect() now uses our js objects instead of putting a table id as a
parameter
Other bug fixes

--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -81,11 +81,7 @@ main {
     }
     #library {
         display: flex;
-        // set flex-direction to column when fixed in webkit
-        flex-direction: row;
-        @-moz-document url-prefix() {
-            flex-direction: column;
-        }
+        flex-direction: column;
 
         -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
 
@@ -94,7 +90,7 @@ main {
             flex: 1;
             overflow: auto;
 
-            #library-artists-wrap, library-albums-wrap {
+            #library-artists-wrap, #library-albums-wrap {
                 overflow: auto;
             }
 
