--- a/views/index.pug
+++ b/views/index.pug
@@ -19,6 +19,7 @@ html
         script(src='/js/komponist.build.js')
         script(src='/floatthead/jquery.floatThead.min.js')
         script(src='/toastr/toastr.min.js')
+        script(src='/html5sortable/html.sortable.min.js')
         script(src='/js/jQuery_sortColumn.min.js')
         // for debugging
         //-script(src='/js/jQuery_sortColumn.js')
