Fix the issues with drag and drop
Separated the library object
Add html5sortable to libraries-used list

--- a/views/index.pug
+++ b/views/index.pug
@@ -68,6 +68,9 @@ html
                             a(href='https://github.com/CodeSeven/toastr', target='_blank') toastr
                             |  - Notification system
                         p
+                            a(href='https://lukasoppermann.github.io/html5sortable/examples/index.html', target='_blank') HTML5 Sortable
+                            |  - Sortable (drag and drop) framework
+                        p
                             a(href='https://github.com/swisnl/jQuery-contextMenu', target='_blank') jquery-contextmenu
                             |  - Context menus on right click
                         p
