--- a/views/index.pug
+++ b/views/index.pug
@@ -237,6 +237,7 @@ html
                                 button#random.btn.btn-default(title='Select random songs in playlist')
                                     span.glyphicon.glyphicon-random
                 #header-middle
+                    img#album-art
                     #time-bar.flex-full.text-center
                         table#title.fixed-table
                             tr
