--- a/public/css/themes/default/vars.less
+++ b/public/css/themes/default/vars.less
@@ -4,6 +4,8 @@
 }
 
 // import modified parts of the theme
+@import "@{package}/type.less";
+@import "@{package}/scaffolding.less";
 @import "@{package}/utilities.less";
 @import "@{package}/tables.less";
 @import "@{package}/buttons.less";
