--- a/public/css/themes/thin-vars.less
+++ b/public/css/themes/thin-vars.less
@@ -5,9 +5,10 @@
 @modal-inner-padding: 10px;
 @breadcrumb-padding-vertical: 2px;
 @breadcrumb-padding-horizontal: 2px;
-@line-height-computed: 2px;
+@line-height-computed: 5px;
 // 34px (default) - 6 (default padding) + new padding - 4px (to align with buttons)
 @input-height-base: 34 - 6 + @padding-base-vertical - 4px;
 @panel-heading-padding: 0;
 @navbar-height: 35px;
 @nav-link-padding: @padding-base-vertical @padding-base-horizontal;
+@form-group-margin-bottom: 5px;
