--- a/views/index.pug
+++ b/views/index.pug
@@ -43,6 +43,7 @@ html
                     .modal-body
                         p
                             = pack.description
+                        hr
                         h4 Database Statistics
                         p#stats
                         hr
@@ -107,54 +108,60 @@ html
                     .modal-body
                         form.form-group(autocomplete='off')
                             h3 Client Settings
-                            label Theme
-                            select#themes.form-control
-                                option(value='default') Default
-                                option(value='default-thin') Default (Thin)
-                                option(value='materialish') Materialish
-                                option(value='materialish-thin') Materialish (Thin)
-                            .checkbox
-                                label(title='Note: This client will be slow with playlists larger than 2000 songs if pagination is disabled.')
-                                    input#use-pages-playlist(type='checkbox')
-                                    | Use playlist pagination
-                            label Maximum playlist table rows per page
-                            input#items-max-playlist.form-control(type='number', min='5', max='1000')
-                            .checkbox
-                                label(title='Note: This client will be slow with libraries larger than 2000 songs if pagination is disabled.')
-                                    input#use-pages-browser(type='checkbox')
-                                    | Use browser pagination
-                            label Maximum browser table rows per page
-                            input#items-max-browser.form-control(type='number', min='5', max='1000')
-                            br
-                            label Maximum notification history table rows
-                            input#history-max.form-control(type='number', min='0', max='1000')
-                            .checkbox
-                                label(title='Disabling pulse animations may improve performace')
-                                    input#use-pulse(type='checkbox')
-                                    | Use pulse animation
-                            .checkbox
-                                label(title='Show or hide "unknown" text in the browser')
-                                    input#use-unknown(type='checkbox')
-                                    | Use 'unknown' text in the browser (if false, it will show nothing)
-                            .checkbox
-                                label(title='When enabled, whenever you skip a song, it will be removed from the playlist')
-                                    input#use-skip-to-remove(type='checkbox')
-                                    | Use skip to remove feature (only works when voting is disabled)
-                            .checkbox
-                                label(title='Stops showing the warning icon when consume mode is enabled')
-                                    input#use-consume-warning(type='checkbox')
-                                    | Show MPD's consume warning
-                            .checkbox
-                                label(title='Note: some errors you may see are false-positives.')
-                                    input#show-all-errors(type='checkbox')
-                                    | Debug: Show all errors
+                            .form-group
+                                label Theme
+                                select#themes.form-control
+                                    option(value='default') Default
+                                    option(value='default-thin') Default (Thin)
+                                    option(value='materialish') Materialish
+                                    option(value='materialish-thin') Materialish (Thin)
+                            .form-group
+                                .checkbox
+                                    label(title='Note: This client will be slow with playlists larger than 2000 songs if pagination is disabled.')
+                                        input#use-pages-playlist(type='checkbox')
+                                        | Use playlist pagination
+                                label Maximum playlist table rows per page
+                                input#items-max-playlist.form-control(type='number', min='5', max='1000')
+                            .form-group
+                                .checkbox
+                                    label(title='Note: This client will be slow with libraries larger than 2000 songs if pagination is disabled.')
+                                        input#use-pages-browser(type='checkbox')
+                                        | Use browser pagination
+                                label Maximum browser table rows per page
+                                input#items-max-browser.form-control(type='number', min='5', max='1000')
+                            .form-group
+                                label Maximum notification history table rows
+                                input#history-max.form-control(type='number', min='0', max='1000')
+                            .form-group
+                                .checkbox
+                                    label(title='Disabling pulse animations may improve performace')
+                                        input#use-pulse(type='checkbox')
+                                        | Use pulse animation
+                                .checkbox
+                                    label(title='Show or hide "unknown" text in the browser')
+                                        input#use-unknown(type='checkbox')
+                                        | Use 'unknown' text in the browser (if false, it will show nothing)
+                                .checkbox
+                                    label(title='When enabled, whenever you skip a song, it will be removed from the playlist')
+                                        input#use-skip-to-remove(type='checkbox')
+                                        | Use skip to remove feature (only works when voting is disabled)
+                                .checkbox
+                                    label(title='Stops showing the warning icon when consume mode is enabled')
+                                        input#use-consume-warning(type='checkbox')
+                                        | Show MPD's consume warning
+                                .checkbox
+                                    label(title='Note: some errors you may see are false-positives.')
+                                        input#show-all-errors(type='checkbox')
+                                        | Debug: Show all errors
                             h3 Server Settings
-                            label Track crossfade (0 - 10 seconds)
-                            input#crossfade(type='range', min='0', max='10')
-                            .checkbox
-                                label(title='Removes songs when skipping and when the song finishes')
-                                    input#consume(type='checkbox')
-                                    | Use consume mode
+                            .form-group
+                                label Track crossfade (0 - 10 seconds)
+                                input#crossfade(type='range', min='0', max='10')
+                            .form-group
+                                .checkbox
+                                    label(title='Removes songs when skipping and when the song finishes')
+                                        input#consume(type='checkbox')
+                                        | Use consume mode
                     .modal-footer
                         button.btn.btn-default(type='button', data-dismiss='modal') Close
 
