--- a/public/css/themes/materialish/vars.less
+++ b/public/css/themes/materialish/vars.less
@@ -37,7 +37,6 @@
 @navbar-default-border:          0;
 @navbar-border-radius:           0;
 @navbar-default-color:           #f7f7f7;
-@navbar-margin-bottom:           0;
 
 // btn
 @btn-default-border:             transparent;
@@ -84,6 +83,10 @@ body {
 // navbar
 .navbar-default {
     color: @navbar-default-color;
+
+    .text-muted {
+        color: #D1D1D1;
+    }
 }
 
 // forms
