--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -249,7 +249,7 @@ main {
         flex-grow: 2;
     }
 }
-.pages {
+.navbar.pages {
     margin-bottom: 0;
     display: flex;
     align-items: center;
