Separated mpcparty.js into multiple files
This project now uses browserify to compile mpcparty.js instead of using
one large file (it uses browserify-middleware to compile when the page
loads)
The unit tests have also been browserify'd
Due to this migration, the utility functions had to be put into the
global mpcp variable. Thus, there may be a few "undefined" function
errors. ... This would have been mostly fine if I had more unit tests...

--- a/views/index.pug
+++ b/views/index.pug
@@ -26,11 +26,11 @@ html
         script(src='/js/jquery-ui.min.js')
         script(src='/jquery-contextmenu/jquery.contextMenu.min.js')
         script(src='/js/jquery-multiselect.js')
-        script(src='/js/mpcparty.js')
+        script(src='/mpcparty.js')
         if (config.testing)
             link(rel='stylesheet', href='https://code.jquery.com/qunit/qunit-1.23.1.css')
             script(src='https://code.jquery.com/qunit/qunit-1.23.1.js')
-            script(src='/js/testing.js')
+            script(src='/testing.js')
 
     body
         #info-modal.modal.fade(tabindex='-1')
