The downloader now ONLY downloads. What a concept.
Removed the player aspect from the downloader. It will now download
music to a location the user specifies.
We also don't need to compile stuff anymore. woo.
This update requires new config, so I'm bumping the minor version.

--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -222,10 +222,10 @@ main {
     padding: 8px;
     cursor: pointer;
 }
-#download-player {
+#downloader {
     min-width: 400px;
 
-    #download-player-title {
+    #downloader-status {
         min-height: 20px;
     }
 }
@@ -411,4 +411,3 @@ table.floatThead-table {
         border-bottom: 1px solid #DDD;
     }
 }
-
