--- a/views/index.pug
+++ b/views/index.pug
@@ -82,10 +82,6 @@ html
                             |  - Download videos from a wide variety of websites (This is a 'frontend' to&nbsp;
                             a(href='https://rg3.github.io/youtube-dl/') youtube-dl
                             | )
-
-                        p
-                            a(href='https://www.npmjs.com/pack/player', target='_blank') player
-                            |  - Play local audio files
                         hr
                         h4 Themes
                         p: a(href='http://getbootstrap.com/', target='_blank') Default Theme
@@ -256,32 +252,25 @@ html
                         span#time-total
                 #header-right
                     #header-right-top.space-between
-                        if (config.player)
+                        if (config.downloader)
                             span.dropdown
-                                button#download-player-btn.btn.btn-default.dropdown-toggle(title='Audio player' data-toggle='dropdown')
+                                button#downloader-btn.btn.btn-default.dropdown-toggle(title='Downloader' data-toggle='dropdown')
                                     span.glyphicon.glyphicon-facetime-video
-                                ul#download-player.dropdown-menu.dropdown-menu-right.stop-click-event
-                                    li.dropdown-header Audio Player (WIP)
+                                ul#downloader.dropdown-menu.dropdown-menu-right.stop-click-event
+                                    li.dropdown-header Audio Downloader
                                     li: a.no-hover
                                         form(autocomplete='off')
+                                            label(for='downloader-url') URL
                                             .input-group
-                                                input#download-player-url.form-control(type='text', title='Enter a URL, such as from youtube, and the player will download the audio, and play it back on the server.', placeholder='Enter a url (Ex: a video from youtube)')
+                                                input#downloader-url.form-control(type='text', title='Enter a URL, such as from youtube, and this will download the audio on to the server.', placeholder='Enter a url (Ex: a video from youtube)')
                                                 span.input-group-btn
-                                                    button#download-player-search.btn.btn-default(type='button')
-                                                        span.glyphicon.glyphicon-search
-                                        #download-player-title
+                                                    button#downloader-download.btn.btn-default(type='button', title='Download')
+                                                        span.glyphicon.glyphicon-download-alt
+                                            label(for='downloader-location') Location
+                                            input#downloader-location.form-control(type='text', title='Location to download the file')
+                                        #downloader-title
                                         .space-between
-                                            #download-player-controls.btn-group
-                                                button#download-player-play.btn.btn-default(title='Play song in playlist')
-                                                    span.glyphicon.glyphicon-play
-                                                button#download-player-pause.btn.btn-default(title='Pause song in playlist')
-                                                    span.glyphicon.glyphicon-pause
-                                                button#download-player-stop.btn.btn-default(title='Stop song in playlist')
-                                                    span.glyphicon.glyphicon-stop
-                                            #download-player-status
-                                        .space-between
-                                            span Volume&nbsp;
-                                            input#download-player-volume(type='range', min='0', max='1', step='0.01', title='Change the volume')
+                                            #downloader-status
                         span.dropdown
                             button.btn.btn-default.dropdown-toggle(title='History' data-toggle='dropdown')
                                 span.glyphicon.glyphicon-time
@@ -483,4 +472,3 @@ html
                     button#start-testing.pull-right.btn.btn-default(type='button') Start tests
                 #testing-main.panel-body
                     #qunit
-
