--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -296,7 +296,7 @@ table.floatThead-table {
     -webkit-box-flex: 1; /* fallback for apple webkit */
     flex: 1;
 }
-.song-list, #downloader-folder-list, #playlist-song-list, #home, #downloader-home .loc-dir, .downloader-loc-dir,  .playlists, .faded, #library-artists-list, #library-albums-list, #downloader-home {
+.song-list, #downloader-folder-list, #playlist-song-list, #home, #downloader-home, .loc-dir, .downloader-loc-dir,  .playlists, .faded, #library-artists-list, #library-albums-list, #downloader-home {
     cursor: pointer;
 }
 .faded {
