This is an update to the performance of mpcp.
This is an update to the client side performance of mpcp. Things
may break.

This mostly replaces certain jquery functions with pure js. In some
cases, this yeilds a ~10% increase in initial page load times and ~25%
increase while switching between states (changing folders, pages,
adding things to the playlist, searching) compared to the previous
version.
Total Startup: Old: ~1.4s, New: ~1.2s
Initiaization: Old: ~82ms, New: ~77ms
Updating Browser: Old: ~57ms, New: ~16ms
Updating Playlist: Old: ~50ms, New: ~12ms
Most of the speedup is from replacing some $.each functions and
$.append (but the append was maybe a 1% difference).

Fix song information not showing up
Modifed behavior of downloader location
Other bug fixes that I found along the way of doing the performance
tweaks

--- a/views/index.pug
+++ b/views/index.pug
@@ -210,7 +210,7 @@ html
                             span ×
                         h4.modal-title
                     .modal-body
-                        table#downloader-location-list.table: tbody
+                        table#song-info.table: tbody
                     .modal-footer
                         button.btn.btn-default(type='button', data-dismiss='modal') Close
 
