--- a/views/index.pug
+++ b/views/index.pug
@@ -231,7 +231,7 @@ html
 
         #page-wrapper
             header.navbar.navbar-default
-                #header-left
+                #header-left.navbar.navbar-default
                     #slider
                         input#volume(type='range', min='0', max='100', orient='vertical', title='Change the volume')
                     #media-buttons
