add bottom padding for fixed header

--- a/public/css/overwrite.less
+++ b/public/css/overwrite.less
@@ -432,6 +432,9 @@ table.table-header-fixed {
         overflow-y: auto;
         overflow-x: auto;
     }
+    body {
+        padding-bottom: 75px;
+    }
     #page-wrapper {
         height: auto;
     }
