--- a/views/index.pug
+++ b/views/index.pug
@@ -14,18 +14,14 @@ html
         link(rel='stylesheet', href='/css/overwrite.css')
         link#theme(rel='stylesheet')
         script(src='/jquery/jquery.min.js')
+        script(src='/js/jquery-ui.min.js')
         script(src='/bootstrap/js/bootstrap.min.js')
-        //script(src='/js/komponist-0.1.0.min.js')
-        // for debugging
         script(src='/js/komponist.build.js')
+        script(src='/js/jQuery_sortColumn.js')
+        script(src='/js/jquery-multiselect.js')
         script(src='/toastr/toastr.min.js')
         script(src='/dragula/dragula.min.js')
-        script(src='/js/jQuery_sortColumn.min.js')
-        // for debugging
-        //-script(src='/js/jQuery_sortColumn.js')
-        script(src='/js/jquery-ui.min.js')
         script(src='/jquery-contextmenu/jquery.contextMenu.min.js')
-        script(src='/js/jquery-multiselect.js')
         script(src='/mpcparty.js')
         if (config.testing)
             link(rel='stylesheet', href='https://code.jquery.com/qunit/qunit-1.23.1.css')
